# vector-db-lunch-and-learn

backend/: .gitignore  README.md  pyproject.toml
backend/app/: app.py
backend/app/controllers/: movies.py  nfl_players.py
backend/app/routes/: movies.py  nfl_players.py  ping.py
backend/app/schemas/: movies.py  nfl_players.py
backend/data/movies/: movie_data.json  movie_fetch.py
backend/data/nfl/: player_fetch.py
backend/vector_store/: chromadb_client.py  embeddings.py  seed_movie_collection.py  seed_nfl_player_collection.py
backend/vector_store/chroma_storage/: chroma.sqlite3
frontend-angular/: .eslintrc.json  README.md  angular.json  package-lock.json  package.json  tsconfig.json
frontend-angular/17.3.17/vector-db-demo/: .tsbuildinfo
frontend-angular/src/: index.html
frontend-angular/src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts
frontend-angular/src/app/api/: api.base.service.ts
frontend-angular/src/app/api/.openapi-generator/: FILES
frontend-angular/src/app/api/api/: api.ts  movies.service.ts  nflPlayers.service.ts  ping.service.ts
frontend-angular/src/app/api/model/: coordinates.ts  modelError.ts  models.ts  (+8 more)
frontend-angular/src/app/utils/: calculateYearsInLeague.ts
frontend-react/vector-db-demo/: api.config.ts  orval.config.ts  package-lock.json  package.json
frontend-react/vector-db-demo/src/api/: axios-client.ts
frontend-react/vector-db-demo/src/app/: layout.tsx
frontend-react/vector-db-demo/src/components/: app-sidebar.tsx
frontend-react/vector-db-demo/src/schema/: vector-db-demo-schema.json
(+29 files in other folders)
